--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "모든 상품"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "상품 번호 입력해서 찾기!!!"
+  location         : "south Korea"
   email            :
   links:
     - label: "Email"
