네이버 업데이트

--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "f121bb21d5c1cea6f7c251d9651ba8ec8c139d72"
 yandex_site_verification :
 baidu_site_verification  :
 
