--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,14 @@
 # main links
 main:
-  - title: "검색"
+  - title: "번호 검색"
     url: /search/
   -
 
 
 docs:
-  -title: "< 번호 검색 >"
+  -title: "< 상품 번호 기억하기!!!  >"
     children:
-    -title: "검색"
+    -title: "번호 검색"
     url: /search/
 
 
