--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: "Search"
+  - title: Search
     url: /search/
   -
 
@@ -8,7 +8,7 @@ main:
 docs:
   -title: "< 상품 번호 기억하기!!!  >"
     children:
-    -title: "search"
+    -title: Search
     url: /search/
 
 
